This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php


Server Fixes:

--Fixed so that periodic placements only go in empty spots and never replace an
  existing map object.




Version 434    2025-November-11

--Whoops.  Obliterated the GRAVE_OLD case in LivingLifePage when I created the
  new STATUE_INFO case.  Restored that GRAVE_OLD code.




Version 432    2025-November-11

--Added better message after hitting the AHAP VOTE button.  Vote isn't
  submitted until you log in to the game.

--Fixed binFolderCache to use dataVersionNumber in cache file name instead of
  overall version number, which fixes a state binCache issue on AHAP.  AHAP was
  stuck at bin caches with the name bin_v430_cache.fcz.  Now they are correctly
  named bin_v59_cache.fcz, matching the dataVersionNumber.  Also, this improves
  behavior for OHOL, which doesn't need to rebuild the bin caches when only the
  client binary version number changes.  Fixes #1122

--Updated to latest stb_vorbis code to fix some bugs and vulnerabilities.
  Thanks npt-1707.  Fixes #1175 Fixes #1177

--Life token message hidden from login screen as long as user has 5 or more
  lives left.  Don't bother them with this info, because life token limit
  usually has no impact these days (limit is so high at 48).  Thanks Twisted.
  Part of #1121

--Added tooltip for SERVICES button on login screen.  Part of #1121

--Made LOGIN button yellow to make it stand out more.  Part of #1121

--Fixed so that animations with forceZeroStart set for moving objects force the
  animation to start at the beginning each time the object starts or stops
  moving.  This also allows a sound to play when the object starts or stops
  moving.  To have a sound play ONLY when an object starts or stops moving,
  give that sound a repeat frequency of 0 Hz and a phase of 0.  Note that in
  the previous codebase, sounds with 0 Hz repeat frequencies would never play.